# kya-skill

./: .gitignore  .pr_body.md  Cargo.toml  LICENSE  README.md  SKILL.md  install.sh
.github/workflows/: release.yml
scripts/: _dump_typed.py  bootstrap.sh  kya_lib.py  relay-grant-delegate.py  relay-set-recipient.py  relay-stake.py  sign-action.py  sign-claim.py  sign-email.py  sign-kyc.py  sign-reveal.py  sign.py  smoke_test.sh  test_kya_lib.py  test_sign_action.py
src/: address.rs  client.rs  eip712.rs  env.rs  error.rs  magiclink.rs  main.rs  output.rs  relay.rs  rpc.rs  version.rs  wallet.rs
src/cmd/: attestations.rs  bootstrap.rs  claim_email.rs  claim_telegram.rs  claim_twitter.rs  grant_delegate.rs  kyc.rs  mod.rs  open.rs  preflight.rs  reveal.rs  set_recipient.rs  sign.rs  sign_action.rs  smoke_test.rs  staking_status.rs
