[package]
name = "kya-agent"
version = "0.3.1"
edition = "2021"
description = "KYA — sign identity & matchmaking attestations, drive the AWP relayer for set-recipient / grant-delegate"
license = "MIT"
repository = "https://github.com/GhostClaw-dev/kya-skill"

[[bin]]
name = "kya-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
hex = "0.4"
sha3 = "0.10"
regex = "1"
url = "2"
rand = "0.8"
once_cell = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
